file(GLOB TEST_CPP_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
foreach(testfile ${TEST_CPP_SOURCES})
    file(RELATIVE_PATH filename ${CMAKE_CURRENT_SOURCE_DIR} ${testfile})
    string(REPLACE ".cpp" "" file ${filename})
    add_executable(${file} ${testfile})
    # target_compile_options(${file} PUBLIC ${COMPILE_TEST_FLAGS} ${TCMALLOC_LIBRARIES})
    target_link_libraries(${file}  ${LINK_FLAGS})
endforeach(testfile ${TEST_CPP_SOURCES})

file(GLOB TEST_C_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/*.c)
foreach(testfile ${TEST_C_SOURCES})
    file(RELATIVE_PATH filename ${CMAKE_CURRENT_SOURCE_DIR} ${testfile})
    string(REPLACE ".c" "" file ${filename})
    add_executable(${file} ${testfile})
    # target_compile_options(${file} PUBLIC ${COMPILE_TEST_FLAGS} ${TCMALLOC_LIBRARIES})
    target_link_libraries(${file}  ${LINK_FLAGS})
endforeach(testfile ${TEST_C_SOURCES})